# video-compression

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
src/: FFmpegUtils.h  VideoCompressor.cpp  VideoCompressor.h  main.cpp
